--- a/css/main.scss
+++ b/css/main.scss
@@ -20,14 +20,17 @@
 	margin-top:120px;
 	background:transparent;
 	color:white;
+	p{
+		padding-right:40%;
+		font-size:18px;
+	}
 }
-.jumbotron p{
-	padding-right:40%;
-	font-size:18px;
-}
-.bg-head .list-inline{
+.bg-head {
+	.list-inline{
 	margin-top:20px;
+	}
 }
+	
 .btn-radius{
 	border-radius:20px;
 }
@@ -48,19 +51,26 @@
 	background:#F6F6F6;
 	margin-top:50px;
 	margin-bottom:50px;
+	.titulo{
+		margin-bottom:40px;
+	}
 }
-.footer{
+.footer {
 	margin-top:30px;
 	margin-bottom:30px;
-}
-.footer .icon-redes{
+	.icon-redes{
     color: #58B7FA;
     margin-top: 20px;
     text-align: center;
+	}
 }
-.footer li{
+	
+.footer {
+	li{
 	border:1px #58B7FA solid;
 	border-radius: 50%;
 	height: 50px;
     width: 50px;
+	}
 }
+	
